--- a/sl/generator/Generator.ui
+++ b/sl/generator/Generator.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>481</height>
+    <width>799</width>
+    <height>519</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>600</width>
-    <height>481</height>
+    <height>519</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>16777215</height>
+    <height>519</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -63,6 +63,67 @@
        <property name="bottomMargin">
         <number>0</number>
        </property>
+       <item>
+        <widget class="QGroupBox" name="groupBox">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>35</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>35</height>
+          </size>
+         </property>
+         <property name="title">
+          <string>Generate</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_5">
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QSpinBox" name="spinBoxN">
+            <property name="value">
+             <number>5</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="labelFrom">
+            <property name="text">
+             <string>of</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSpinBox" name="spinBoxM">
+            <property name="value">
+             <number>36</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_4">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
+       </item>
        <item>
         <widget class="QGroupBox" name="groupBoxFiles">
          <property name="minimumSize">
@@ -365,9 +426,9 @@
               <item>
                <widget class="QLineEdit" name="lineEditPositionsValues">
                 <property name="toolTip">
-                 <string>File with strings such as
-1, 3, 8, 10
-2, 6, 12, 18
+                 <string>File with space separated strings such as
+1 3 8 10
+2 6 12 18
 and so on</string>
                 </property>
                </widget>
@@ -425,7 +486,7 @@ and so on</string>
             <item>
              <widget class="QLineEdit" name="lineEditEvenPositions">
               <property name="toolTip">
-               <string>Comma separated list of numbers</string>
+               <string>Space separated list of numbers</string>
               </property>
              </widget>
             </item>
@@ -523,19 +584,6 @@ and so on</string>
       </item>
      </layout>
     </item>
-    <item>
-     <spacer name="verticalSpacer">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -543,7 +591,7 @@ and so on</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>600</width>
+     <width>799</width>
      <height>21</height>
     </rect>
    </property>
