--- a/sl/generator/Generator.ui
+++ b/sl/generator/Generator.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>691</width>
-    <height>516</height>
+    <width>642</width>
+    <height>576</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>600</width>
-    <height>516</height>
+    <width>642</width>
+    <height>576</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>516</height>
+    <height>576</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -129,13 +129,13 @@
          <property name="minimumSize">
           <size>
            <width>0</width>
-           <height>165</height>
+           <height>214</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>16777215</width>
-           <height>165</height>
+           <height>214</height>
           </size>
          </property>
          <property name="title">
@@ -238,6 +238,31 @@
               </item>
               <item>
                <widget class="QToolButton" name="toolButtonC">
+                <property name="text">
+                 <string notr="true">...</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <layout class="QVBoxLayout" name="verticalLayout_11">
+            <item>
+             <widget class="QLabel" name="labelD">
+              <property name="text">
+               <string>File D</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <layout class="QHBoxLayout" name="horizontalLayoutD">
+              <item>
+               <widget class="QLineEdit" name="lineEditD"/>
+              </item>
+              <item>
+               <widget class="QToolButton" name="toolButtonD">
                 <property name="text">
                  <string notr="true">...</string>
                 </property>
@@ -363,6 +388,40 @@
                <number>10</number>
               </property>
               <property name="value">
+               <number>10</number>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="Line" name="line_5">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="checkBoxFilterPairsD">
+              <property name="layoutDirection">
+               <enum>Qt::RightToLeft</enum>
+              </property>
+              <property name="text">
+               <string>Pairs from file D</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QSpinBox" name="spinBoxPairsDMin">
+              <property name="minimum">
+               <number>5</number>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QSpinBox" name="spinBoxPairsDMax">
+              <property name="minimum">
                <number>10</number>
               </property>
              </widget>
@@ -591,7 +650,7 @@ and so on</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>691</width>
+     <width>642</width>
      <height>21</height>
     </rect>
    </property>
